2003-10-21 Damien Sandras  <dsandras@seconix.com>

	* NEWS: Updated with latest CVS news.

	* src/endpoint.cpp: Improved GetRemoteConnectionInfo so that it
	doesn't use GConf.
	
	* src/misc.cpp, src/misc.h: Improved incoming call dialog so that
	it presents the remote application and a clever guessing of
	the remote URL.
	
	* src/tools.cpp: s/Placed calls/Placed Calls
	
2003-10-20 Damien Sandras  <dsandras@seconix.com>

	* NEWS: Updated with latest CVS news.
	
2003-10-20 Damien Sandras  <dsandras@seconix.com>

	* src/codec_info.h: Really fixed #124857 reported by Christian Rose
	<menthos@menthos.com>.

	* src/endpoint.cpp: Display Remote Party Number in the incoming
	call dialog if available.
	
2003-10-19 Damien Sandras  <dsandras@seconix.com>

	* lib/gconf_widgets_extensions.c: Fixed bug. Allow to set empty
	GConf strings.

	* src/ils.cpp, src/ils.h: Disable ILS registering if ILS fields
	are missing. Protect the popup around mutexes.
	
2003-10-18 Damien Sandras  <dsandras@seconix.com>

	* NEWS: Updated with CVS news.

	* lib/Makefile.am: Added the new files to the build system.
	
	* lib/gconf_widgets_extensions.c, lib/gconf_widgets_extensions.h:
	Added those generic callbacks and notifiers aiming at updating
	widgets when a gconf key is modified and vice-versa.
	
	* lib/gnome_prefs_window.c, lib/gnome_prefs_window.h: Added functions
	to help building gconf managed and HIG-compliant preferences windows.

	* src/common.h, src/config.cpp, src/config.h, src/connection.cpp, 
	src/druid.cpp, src/endpoint.cpp, src/endpoint.h, src/gdkvideoio.cpp,
	src/ils.cpp, src/main_window.cpp, src/menu.cpp, src/misc.cpp, 
	src/misc.h, src/pref_window.cpp, src/toolbar.cpp, src/videograbber.cpp:
	Made sure there are no hardcoded GConf keys prefixes anymore. Use
	the new system to build the preferences window. Fixed bug: when
	the video device is changed while preview is not active, the
	preview is not activated anymore.
